Removed createTestReports() and sonarqube configuration